--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 
 
-body{
+/* body{
     background-color: deepskyblue;
-}
+} */
 p{
     color: rgb(1, 1, 3);
 }
 h1{
-    color: black;
+    color: green;
 }
 button{
     color: black;
     background-color:aqua;
     border-radius: 3px;
     border: 1px;
+    margin: 1px;
 }
 a{
     text-decoration: dotted;
