--- a/style.css
+++ b/style.css
@@ -1,25 +1,59 @@
-
-
-/* body{
-    background-color: deepskyblue;
-} */
-p{
-    color: rgb(1, 1, 3);
+title{
+    color: red;
 }
 h1{
-    color: green;
+    color: red;
+    background-color: aqua;
+    
 }
-button{
-    color: black;
-    background-color:aqua;
-    border-radius: 3px;
-    border: 1px;
-    margin: 1px;
+body{
+    background-color: grey;
 }
 a{
-    text-decoration: dotted;
-    color: blueviolet;
-    }
+    color: blue;
+    
+}
+h2{
+    padding: 10px 10px 0px 10px;
+    margin: 0px 10px 0px 10px;
+}
+#first{
+    color: purple;
+    padding: 10px 10px 0px 10px;
+    margin: 0px 10px 0px 10px;
+}
+#second{
+    color: blue;
+    padding: 10px;
+    margin: 10px;
+}
+#third{
+    color: aqua;
+    padding: 10px;
+    margin: 10px;
+}
+#fourth{
+    color: green;
+    padding: 10px;
+    margin: 10px;
+}
+#fifth{
+    color: yellow;
+    padding: 10px;
+    margin: 10px;
+}
+#sixth{
+    color: orange;
+    padding: 10px;
+    margin: 10px;
+}
+#seventh{
+    color: red;
+    padding: 10px;
+    margin: 10px;
+}
+
+
 
 
 
